# open-hack-ink-starter

./: README.md
contracts/hello_world/: Cargo.toml  lib.rs
contracts/todo_app/: Cargo.toml  lib.rs
frontend/todo-app-ui/: .env  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/todo-app-ui/app/: layout.tsx  page.tsx
frontend/todo-app-ui/artifacts/: todo_app.contract  todo_app.json  todo_app.wasm
frontend/todo-app-ui/components/: AccountInfo.tsx  AddTodoButton.tsx  AppProvider.tsx  ConnectButton.tsx  ContractProvider.tsx  TodoItem.tsx  TodoList.tsx
frontend/todo-app-ui/lib/todo-app/: constructor-query.d.ts  constructor-tx.d.ts  index.d.ts  query.d.ts  tx.d.ts  types.d.ts
